--- a/core/src/main/res/layout/view_empty.xml
+++ b/core/src/main/res/layout/view_empty.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,6 +11,9 @@
         android:layout_marginTop="4dp"
         android:gravity="center"
         android:text="@string/no_data"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:drawableTopCompat="@drawable/asteroid"
+        android:scaleX="0.3"
+        android:scaleY="0.3"/>
 
 </RelativeLayout>
