--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,12 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.Astedroid" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowBackground">@color/grey</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.Astedroid" parent="Base.Theme.Astedroid" />
-
-    <style name="Theme.Astedroid.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
 
     <style name="Theme.Astedroid.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
